Fixed display of Images

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <section class="section">
         <div class="sec_container">
             <div class="image">
-                <img src="../NFT/Mentor/images/image-equilibrium.jpg" alt="equilibrium image">
+                <img src="Mentor/images/image-equilibrium.jpg" alt="equilibrium image">
                 <div class="overlay"></div>
                 <img src="Mentor/images/icon-view.svg" class="view-icon">
             </div>
@@ -45,7 +45,7 @@
             <div class="seperator"></div>
 
             <div class="author">
-                <img src="../NFT/Mentor/images/image-avatar.png" alt="author image">
+                <img src="Mentor/images/image-avatar.png" alt="author image">
                 <p>Creation of <a href="#">Jules Wyvern</a></p>
             </div>
             
