--- a/index.html
+++ b/index.html
@@ -19,25 +19,25 @@
     <section class="section">
         <div class="sec_container">
             <div class="image">
-                <img src="Mentor/images/image-equilibrium.jpg" alt="equilibrium image">
+                <img src="Mentor/images/image-equilibrium.jpg" alt="equilibrium">
                 <div class="overlay"></div>
-                <img src="Mentor/images/icon-view.svg" class="view-icon">
+                <img src="Mentor/images/icon-view.svg" class="view-icon" alt="eye-icon">
             </div>
 
             <div class="data">
-                <h1>Equilibrium #3429</h1>
+                <h1><a href="#">Equilibrium #3429</a></h1>
 
                 <p>Our Equilibrium collection promotes balance and calm.</p>
             </div>
 
             <div class="infos">
                 <div class="price">
-                    <img src="Mentor/images/icon-ethereum.svg" alt="euthereum image">
-                    <h2>0.041ETH</h2>
+                    <img src="Mentor/images/icon-ethereum.svg" alt="euthereum">
+                    <p>0.041ETH</p>
                 </div>
 
                 <div class="time-left">
-                    <img src="Mentor/images/icon-clock.svg" alt="clock image">
+                    <img src="Mentor/images/icon-clock.svg" alt="clock">
                     <p>3 days left</p>
                 </div>
             </div>
@@ -45,7 +45,7 @@
             <div class="seperator"></div>
 
             <div class="author">
-                <img src="Mentor/images/image-avatar.png" alt="author image">
+                <img src="Mentor/images/image-avatar.png" alt="author">
                 <p>Creation of <a href="#">Jules Wyvern</a></p>
             </div>
             
