--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <section class="section">
+    <main>
         <div class="sec_container">
             <div class="image">
                 <img src="Mentor/images/image-equilibrium.jpg" alt="equilibrium">
@@ -50,6 +50,6 @@
             </div>
             
         </div>
-    </section>
+    </main>
 </body>
 </html>
