--- a/index.html
+++ b/index.html
@@ -50,6 +50,13 @@
             </div>
             
         </div>
+
+        <div class="attribution">
+            Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+            Coded by <a href="https://github.com/L0rdix" target="_blank">Amir</a>.
+        </div>
     </main>
+
+   
 </body>
 </html>
