--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
 
             <div class="infos">
                 <div class="price">
-                    <img src="Mentor/images/icon-ethereum.svg" alt="euthereum">
+                    <img src="Mentor/images/icon-ethereum.svg" alt="">
                     <p>0.041ETH</p>
                 </div>
 
                 <div class="time-left">
-                    <img src="Mentor/images/icon-clock.svg" alt="clock">
+                    <img src="Mentor/images/icon-clock.svg" alt="">
                     <p>3 days left</p>
                 </div>
             </div>
